--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:500px" src="./resources/dataset_final.pdf"/>
 					</center>
 				</td>
 			</tr>
