--- a/index.html
+++ b/index.html
@@ -140,24 +140,26 @@
 	<center>
 		<span style="font-size:36px">GAIN: On the Generalization of Instructional Action Understanding</span>
 		<table align=center width=600px>
-			<table align=center width=800px>
+			<table align=center width=600px>
 				<tr>
-					<td align=center width=260px>
+					<td align=center width=100px>
 						<center>
 							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">First AUTHOR</a></span>
 						</center>
 					</td>
-					<td align=center width=260px>
+					<td align=center width=100px>
 						<center>
 							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Second Author</a></span>
 						</center>
 					</td>
-					<td align=center width=260px>
+					<td align=center width=100px>
 						<center>
 							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Third Author</a></span>
 						</center>
 					</td>
 				</tr>
+			</table>
+			<table align=center width=800px>
 				<tr>
 					<td align=center width=100px>
 						<center>
@@ -166,12 +168,12 @@
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">First AUTHOR</a></span>
+							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Second Author</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Second Author</a></span>
+							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Third Author</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
@@ -203,7 +205,7 @@
 			<tr>
 				<td width=260px>
 					<center>
-						<img class="round" style="width:800px" src="./resources/dataset_final.pdf"/>
+						<img class="round" style="width:1000px" src="./resources/dataset_final.pdf"/>
 					</center>
 				</td>
 			</tr>
