--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Guangyi Chen</a></span>
+							<span style="font-size:24px">Guangyi Chen</span>
 						</center>
 					</td>
 					<td align=center width=100px>
