--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px">Guangyi Chen</span>
+							<span style="font-size:24px"><a>Guangyi Chen</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Yansong Tang</a></span>
+							<span style="font-size:24px"><a>Yansong Tang</a></span>
 						</center>
 					</td>
 				</tr>
@@ -163,22 +163,22 @@
 				<tr>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Jinan Bao</a></span>
+							<span style="font-size:24px"><a>Jinan Bao</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Kun Zhang</a></span>
+							<span style="font-size:24px"><a>Kun Zhang</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Jie Zhou</a></span>
+							<span style="font-size:24px"><a>Jie Zhou</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Jiwen Lu</a></span>
+							<span style="font-size:24px"><a>Jiwen Lu</a></span>
 						</center>
 					</td>
 				</tr>
@@ -213,7 +213,7 @@
 		<table align=center width=850px>
 			<tr>
 				<td>
-					This was a template originally made for <a href="http://richzhang.github.io/colorization/">Colorful Image Colorization</a>. The code can be found in this <a href="https://github.com/richzhang/webpage-template">repository</a>.
+					This was a draft project page for GAIN.
 				</td>
 			</tr>
 		</table>
