--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 		<table align=center width=850px>
 			<tr>
 				<td>
-					This was a draft project page for GAIN.
+					This is a draft project page for GAIN.
 				</td>
 			</tr>
 		</table>
