--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					</td>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href=''>[GitHub]</a></span><br>
+							<span style="font-size:24px"><a href='https://github.com/jun-long-li/GAIN'>[GitHub]</a></span><br>
 						</center>
 					</td>
 				</tr>
@@ -232,7 +232,23 @@
 		</tr>
 	</table>
 	<br>
+	
+	<hr>
+	<center><h1>Download</h1></center>
+	<p align="center">
+		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+	</p>
 
+	<table align=center width=800px>
+		<br>
+		<tr>
+			<center>
+				<span style="font-size:28px"><a href=''>[Slides]</a>
+				</span>
+			</center>
+		</tr>
+	</table>
+	
 	<hr>
 	<center><h1>Talk</h1></center>
 	<p align="center">
@@ -281,7 +297,7 @@
 	<table align=center width=800px>
 		<br>
 		<tr><center>
-			<span style="font-size:28px">&nbsp;<a href='https://github.com/richzhang/webpage-template'>[GitHub]</a>
+			<span style="font-size:28px">&nbsp;<a href=''>[GitHub]</a>
 			</center>
 		</span>
 	</table>
