--- a/index.html
+++ b/index.html
@@ -235,15 +235,11 @@
 	
 	<hr>
 	<center><h1>Download</h1></center>
-	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
-	</p>
-
 	<table align=center width=800px>
 		<br>
 		<tr>
 			<center>
-				<span style="font-size:28px"><a href=''>[Slides]</a>
+				<span style="font-size:28px"><a href='https://pan.baidu.com/s/1h6UJ1A_ldq4mv4V4nFe-7Q?pwd=r5i6'>[Baidu Pan]</a>
 				</span>
 			</center>
 		</tr>
