--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
 		<tr>
 			<center>
 				<span style="font-size:28px"><a href='https://pan.baidu.com/s/1h6UJ1A_ldq4mv4V4nFe-7Q?pwd=r5i6'>[Baidu Pan]</a>
-				</span>
+				</span> 
+				<span style="font-size:18px"><a>Code: r5i6 </a></span>
 			</center>
 		</tr>
 	</table>
