--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 		<br>
 		<tr>
 			<center>
-				<span style="font-size:28px"><a href='https://pan.baidu.com/s/1h6UJ1A_ldq4mv4V4nFe-7Q?pwd=r5i6'>[Baidu Pan]</a>
+				<span style="font-size:24px"><a href='https://pan.baidu.com/s/1h6UJ1A_ldq4mv4V4nFe-7Q?pwd=r5i6'>[Baidu Pan]</a>
 				</span> 
-				<span style="font-size:18px"><a>Code: r5i6 </a></span>
+				<span style="font-size:18px">Code: r5i6</span>
 			</center>
 		</tr>
 	</table>
