--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		<tr>
 			<td align=center width=400px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/method_diagram.png"/></td>
+					<td><img class="round" style="width:450px" src="./resources/method_comb.pdf"/></td>
 				</center>
 			</td>
 		</tr>
@@ -286,7 +286,7 @@
 		<center>
 			<tr>
 				<td>
-					Short description if wanted
+					 (a) The causal inference illustration for instructional action understanding. (b) Approximation with Monte Carlo method.
 				</td>
 			</tr>
 		</center>
