--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@
 	<table align=center width=450px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
-				In Conference, 20XX.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
+			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.pdf"/></a></td>
+			<td><span style="font-size:14pt">Li, Chen, Tang, Bao, Zhang, Zhou Lu.<br>
+				<b>GAIN: On the Generalization of Instructional Action Understanding.</b><br>
+				In ICLR, 2023.<br>
+				(hosted on <a href="https://openreview.net/pdf?id=RlPmWBiyp6w">OpenReview</a>)<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
