--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href=''>[Paper]</a></span>
+							<span style="font-size:24px"><a href='https://openreview.net/pdf?id=RlPmWBiyp6w'>[Paper]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
@@ -300,11 +300,11 @@
 	</table>
 	<br>
 	<hr>
-	<table align=center width=450px>
+	<table align=center width=800px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.pdf"/></a></td>
-			<td><span style="font-size:14pt">Li, Chen, Tang, Bao, Zhang, Zhou Lu.<br>
+			<td><span style="font-size:14pt">Li, Chen, Tang, Bao, Zhang, Zhou, Lu.<br>
 				<b>GAIN: On the Generalization of Instructional Action Understanding.</b><br>
 				In ICLR, 2023.<br>
 				(hosted on <a href="https://openreview.net/pdf?id=RlPmWBiyp6w">OpenReview</a>)<br>
