--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 	<table align=center width=800px>
 		<br>
 		<tr><center>
-			<span style="font-size:28px">&nbsp;<a href=''>[GitHub]</a>
+			<span style="font-size:28px">&nbsp;<a href='https://github.com/jun-long-li/GAIN'>[GitHub]</a>
 			</center>
 		</span>
 	</table>
