--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 		<iframe width="660" height="395" src="https://www.youtube.com/embed/QWMuAD6ew4k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
 	</p>
 
-	<table align=center width=800px>
+<!-- 	<table align=center width=800px>
 		<br>
 		<tr>
 			<center>
@@ -261,7 +261,7 @@
 			</center>
 		</tr>
 	</table>
-	<hr>
+	<hr> -->
 
 	<center><h1>Code</h1></center>
 
