--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 		<table align=center width=850px>
 			<tr>
 				<td>
-					This is a draft project page for GAIN.
+					This is the project page for GAIN.
 				</td>
 			</tr>
 		</table>
@@ -235,7 +235,25 @@
 	
 	<hr>
 	<center><h1>Download</h1></center>
-	<table align=center width=800px>
+
+	<table align=center width=250px>
+		<tr>
+			<td align=center width=120px>
+				<center>
+					<span style="font-size:24px"><a href='https://pan.baidu.com/s/1ChVg9w2hT9tiwZAuXf6lqA?pwd=ui8y'>[Baidu Pan]</a>
+					</span> 
+					<span style="font-size:18px">Code: ui8y</span>
+				</center>
+			</td>
+			<td align=center width=120px>
+				<center>
+					<span style="font-size:24px"><a href='https://drive.google.com/drive/folders/1FDPUFA9fRA-15oeOztYuOAqcWexFyk_T?usp=share_linkhttps://drive.google.com/drive/folders/1FDPUFA9fRA-15oeOztYuOAqcWexFyk_T?usp=share_link'>[Google Drive]</a></span><br>
+				</center>
+			</td>
+		</tr>
+	</table>
+	
+<!-- 	<table align=center width=800px>
 		<br>
 		<tr>
 			<center>
@@ -244,7 +262,7 @@
 				<span style="font-size:18px">Code: ui8y</span>
 			</center>
 		</tr>
-	</table>
+	</table> -->
 	
 	<hr>
 	<center><h1>Talk</h1></center>
